[package]
authors = ["Carl Lerche <me@carllerche.com>", "Yellow Huang <yellow_huang@arcadyan.com.tw>"]
edition = "2018"
name = "flatbread"
version = "0.4.1"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/flatbread/0.4.0/flatbread/"
repository = "https://github.com/tokio-rs/flatbread"
description = """
Based on open-soruce mini-redis architecture, porting for arc/flatbread project.
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "flatbread-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "flatbread-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
